# benchmarks

python/json/: pyproject.toml
python/json/tests/: test_bench.py
